# WindowsTools

./: .ci-trigger  .eslintrc.cjs  .gitignore  .prettierrc.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  OPTIMIZATION_CHANGES.md  README.md  README_EN.md  SECURITY.md  check_features.ps1  docker-compose.yml  index.html  package-lock.json  package.json  test_all_features.ps1  test_backend.ps1  vite.config.ts  vitest.config.ts
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: build.yml  cd.yml  ci.yml  codeql.yml  deploy.yml  release.yml
crates/wt-agent/: Cargo.toml
crates/wt-agent/src/: lib.rs  main.rs
crates/wt-core/: Cargo.toml
crates/wt-core/src/: error.rs  ids.rs  ipc.rs  lib.rs  privilege.rs  registry_path.rs  result_ext.rs  secret.rs  telemetry.rs  text.rs
crates/wt-service/: Cargo.toml
crates/wt-service/src/: lib.rs  main.rs
crates/wt-ui/: Cargo.toml  build-ui.bat  build.rs  dev-ui.bat  tauri.conf.json
crates/wt-ui/capabilities/: default.json
crates/wt-ui/manifest/: commands.json
crates/wt-ui/src/: lib.rs  main.rs  manifest.rs  palette.rs  rpc.rs  state.rs  stream.rs  types.rs
crates/wt-ui/src/commands/: disk.rs  hosts.rs  launch.rs  mod.rs  network.rs  palette.rs  performance.rs  processes.rs  registry.rs  repair.rs  services.rs  startup.rs  system.rs  task.rs
crates/wt-win32/: Cargo.toml
crates/wt-win32/src/: disk.rs  env.rs  hosts.rs  launch.rs  lib.rs  network.rs  perf.rs  pipe.rs  privilege.rs  process.rs  registry.rs  repair.rs  service.rs  startup.rs  system.rs  task.rs  util.rs
deploy/: nginx.conf
docs/: architecture.md
docs/superpowers/plans/: 2026-06-01-windows-tools-completion.md
docs/superpowers/specs/: 2026-06-02-comprehensive-optimization-design.md
extension/: background.js  content.css  content.js  manifest.json
public/test-data/: mock-titles.html  mock-titles.json  mock-titles.tsv
public/test-pages/: ecommerce-test.html  sample-data.csv  test-data.json  video-test.html
server/: package.json  puppeteer-server.ts
server/src/: index.ts  setup.ts
server/src/routes/: browser.ts  crawler.ts  proxy.ts
server/src/utils/: envChecker.ts  logger.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crawler.rs  disk.rs  helpers.rs  lib.rs  main.rs  network.rs  process.rs  registry.rs  service.rs  system.rs  utils.rs
src/api/: tauri.ts
src/components/: AdminButton.vue  ErrorDetail.vue  LanguageSwitcher.vue  LogViewer.vue  NotificationPanel.vue  WelcomeGuide.vue
src/composables/: useAdmin.ts  usePerformance.ts
src/locales/: en.json  index.ts  zh-CN.json
src/router/: index.ts
src/services/: api.ts
src/stores/: appStore.ts  index.ts  taskStore.ts
src/types/: index.ts
src/utils/: common.ts  compatibility.ts  crawler.ts  dataClean.test.ts  dataClean.ts  errorHandler.test.ts  errorHandler.ts  export.ts  interfaceAdapter.ts  nlp.ts  performance.ts  proxy.ts  scheduler.ts  screenshot.ts  selectors.ts  urlParser.ts
src/views/: Advanced.vue  BrowserInfo.vue  DataClean.vue  Disk.vue  InterfaceAdapter.vue  Network.vue  Optimization.vue  Processes.vue  Screenshot.vue  SelectorTester.vue  ServerManager.vue  Services.vue  Settings.vue  TaskConfig.vue  TaskList.vue  Templates.vue  UrlAnalyzer.vue
ui/: .prettierignore  .prettierrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
ui/src/: App.vue  main.ts
ui/src/api/: index.test.ts  index.ts
ui/src/components/: CommandPalette.vue  Loading.vue  ResourceState.vue  RiskChip.vue  Sidebar.vue  SkeletonList.vue  StatusBar.vue
ui/src/composables/: useI18n.ts
ui/src/locales/: en.json  zh-CN.json
ui/src/router/: index.ts
ui/src/stores/: command.test.ts  command.ts  index.ts  system.test.ts  system.ts  ui.test.ts  ui.ts
ui/src/styles/: base.css  tokens.css
ui/src/types/: api.ts  domain.ts
ui/src/utils/: format.test.ts  format.ts
ui/src/views/: Dashboard.vue  Disk.vue  Hosts.vue  Network.vue  NotFound.vue  Performance.vue  Processes.vue  Registry.vue  Repair.vue  Services.vue  Settings.vue  Startup.vue  Tasks.vue
