[workspace]
resolver = "2"
members = [
    "crates/wt-core",
    "crates/wt-win32",
    "crates/wt-service",
    "crates/wt-agent",
    "crates/wt-ui",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["WindowsTools Contributors"]
repository = "https://github.com/badhope/WindowsTools"

[workspace.dependencies]
# Internal crates
wt-core = { path = "crates/wt-core", version = "2.0.0" }
wt-win32 = { path = "crates/wt-win32", version = "2.0.0" }
wt-service = { path = "crates/wt-service", version = "2.0.0" }
wt-agent = { path = "crates/wt-agent", version = "2.0.0" }
wt-ui = { path = "crates/wt-ui", version = "2.0.0" }

# Runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.21"
rmp-serde = "1.3"

# Errors
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Windows
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_ProcessSnapshotting",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_System_Environment",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_Power",
    "Win32_System_Variant",
    "Win32_System_Shutdown",
    "Win32_System_TaskScheduler",
    "Win32_System_EventLog",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Wmi",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Restore",
    "Win32_System_UpdateAssessment",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Security_Credentials",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Vhd",
    "Win32_Storage_Xps",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Devices_Properties",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Enumeration",
    "Win32_Devices_Enumeration_Pnp",
] }
windows-sys = { version = "0.61", features = ["Win32", "Win32_Foundation", "Win32_System_Threading", "Win32_System_JobObjects"] }
windows-service = "0.8"

# Encoding / strings
encoding_rs = "0.8"
widestring = "1.1"
percent-encoding = "2.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# ID
uuid = { version = "1.23", features = ["v4", "serde"] }

# CLI / arg parsing
clap = { version = "4.5", features = ["derive"] }

# Data structures
parking_lot = "0.12"
dashmap = "6.1"
once_cell = "1.20"
crossbeam-channel = "0.5"

# Filesystem / paths
dirs = "5.0"

# Globbing
glob = "0.3"

# Tar archive (export registry backups)
tar = "0.4"

# Compression
flate2 = "1.0"

# Crypto (HMAC for pipe auth)
hmac = "0.12"
sha2 = "0.11"
subtle = "2.6"
rand = "0.9"

# Plugins / manifests
inventory = "0.3"

# Tauri
tauri = { version = "2.1", features = [] }
tauri-build = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-deep-link = "2.0"
tauri-plugin-opener = "2.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1
debug = 1
incremental = true
