[package]
name = "windows-tools"
version = "1.1.0"
description = "WindowsTools - A powerful Windows system management tool"
authors = ["badhope <badhope@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/badhope/WindowsTools"
readme = "README.md"
keywords = ["windows", "system", "toolbox", "management", "tauri"]
categories = ["gui", "os::windows-apis"]

[lib]
name = "windows_tools_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
    "Win32_System_Environment",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug"
] }
winreg = "0.52"
sysinfo = "0.32"
chrono = "0.4"
encoding_rs = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
