[package]
name = "wt-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "WindowsTools SYSTEM-context service. Installs as a Windows service running as LocalSystem; provides an elevated JSON-RPC endpoint for HKLM writes, SCM, hosts, SFC/DISM, etc."

[[bin]]
name = "wt-service"
path = "src/main.rs"

[lib]
name = "wt_service"
path = "src/lib.rs"

[dependencies]
wt-core.workspace = true
wt-win32.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
windows.workspace = true
windows-service.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
sha2.workspace = true
subtle.workspace = true
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
