[package]
name = "wt-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WindowsTools Tauri 2 UI host"

[lib]
name = "wt_ui"
path = "src/lib.rs"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
wt-core = { workspace = true }
wt-win32 = { workspace = true }
wt-agent = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-store = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
